added naver search advisor owner verification code for Doin KICAT

--- a/app/core/templates/core/base.html
+++ b/app/core/templates/core/base.html
@@ -34,6 +34,7 @@
         <meta property="kakao:image" content="{{ request.scheme }}://{{ request.get_host }}{% static 'img/symbol.png' %}">
 
         <!-- Naver -->
+        <meta name="naver-site-verification" content="f94564504d854c80400fb4347059c476e5d42a07" /> 
         <meta name="naver-site-verification" content="34ac3e85318a37023de0f67b74858d49a8275221" />
         <meta name="naver-site-verification" content="c1d313a86581726eff6c6a04eecc7be9fc0f9f24" />
 
