--- a/app/core/templates/core/base.html
+++ b/app/core/templates/core/base.html
@@ -1342,7 +1342,7 @@
                 <h3 class="font-medium text-base mb-2 border-b pb-2">Family Site</h3>
                 <div>
                     <!-- TODO: 운영 배포 시 도메인 주소로 변경 필요 -->
-                    <a href="http://agency.local:8000/" class="inline-block p-2 border rounded bg-white text-sm hover:bg-gray-50 transition-colors">
+                    <a href="{% url 'core:korea_culture_arts_translation_agency' %}" class="inline-block p-2 border rounded bg-white text-sm hover:bg-gray-50 transition-colors">
                         한국문화예술번역원
                     </a>
                 </div>
