2차 개선 완료

--- a/app/core/templates/core/korea_culture_arts_translation_agency.html
+++ b/app/core/templates/core/korea_culture_arts_translation_agency.html
@@ -26,7 +26,7 @@
         <div data-collapse="medium" data-animation="default" data-duration="400" class="navbar w-nav">
           <div class="container w-container">
             <a href="index.html" class="w-nav-brand w--current">
-              <img src="{% static 'wp-content/themes/kicat/images/logo.svg' %}" width="220" alt="" class="image-2" />
+              <img src="{% static 'img/kicat_logo_new.png' %}" width="220" alt="" class="image-2" />
             </a>
             <nav role="navigation" class="nav-menu w-nav-menu">
               <a href="#Introduction" class="nav-link w-nav-link">소개</a>
