2차 개선 완료

--- a/app/core/templates/core/korea_culture_arts_translation_agency.html
+++ b/app/core/templates/core/korea_culture_arts_translation_agency.html
@@ -46,7 +46,7 @@
 
     <header id="top" class="header">
       <div class="container">
-        <h1 data-ix="hero" class="heading">예술의 깊이, 인문의 향기까지<br />번역합니다</h1>
+        <h1 data-ix="hero" class="heading">예술의 결을 살리고,<br />문화의 깊이를 이해합니다.</h1>
         <div data-ix="hero" class="div-block-6"></div>
         <p data-ix="hero-2" class="main-subtitle w-hidden-tiny">
           문화체육관광부의 전문성을 계승한 한국문화예술번역원입니다. 우리는 단순한 텍스트 전달자가 아닌, 문화와 예술의 고유한 결을 이해하는 전문회사입니다. 차별화된 지식과 경험을 바탕으로 격이 다른 통번역 서비스를 경험해 보세요.
@@ -69,17 +69,17 @@
             <div class="slide w-slide">
               <div class="clients-grid">
                 <img src="{% static 'wp-content/themes/kicat/images/g1.jpg' %}" width="179" alt="문화체육관광부" />
-                <img src="{% static 'wp-content/themes/kicat/images/g-hang.jpg' %}" width="179" alt="국립현대미술관" />
-                <img src="{% static 'wp-content/themes/kicat/images/g-tech.jpg' %}" width="179" alt="국립아시아문화전당" />
-                <img src="{% static 'wp-content/themes/kicat/images/g-sih.jpg' %}" width="179" alt="한국문화예술교육진흥원" />
-                <img src="{% static 'wp-content/themes/kicat/images/g17.jpg' %}" width="179" alt="한국공예디자인문화진흥원" />
-                <img src="{% static 'wp-content/themes/kicat/images/g-hyundai.jpg' %}" width="179" alt="한국국제문화교류진흥원" />
+                <img src="{% static 'wp-content/themes/kicat/images/nmmca.svg' %}" width="179" alt="국립현대미술관 nmmca" />
+                <img src="{% static 'wp-content/themes/kicat/images/acc.svg' %}" width="179" alt="국립아시아문화전당 acc" />
+                <img src="{% static 'wp-content/themes/kicat/images/kaces.svg' %}" width="179" alt="한국문화예술교육진흥원 kaces" />
+                <img src="{% static 'wp-content/themes/kicat/images/kcdf.png' %}" width="179" alt="한국공예디자인문화진흥원 kcdf" />
+                <img src="{% static 'wp-content/themes/kicat/images/kofice.jpeg' %}" width="179" alt="한국국제문화교류진흥원 kofice" />
               </div>
             </div>
             <div class="slide w-slide">
               <div class="clients-grid">
-                <img src="{% static 'wp-content/themes/kicat/images/g18.jpg' %}" width="179" alt="(재)예술경영지원센터" />
-                <img src="{% static 'wp-content/themes/kicat/images/g16.jpg' %}" width="179" alt="서울시립미술관" />
+                <img src="{% static 'wp-content/themes/kicat/images/g18.svg' %}" width="179" alt="(재)예술경영지원센터 kams" />
+                <img src="{% static 'wp-content/themes/kicat/images/smoa.avif' %}" width="179" alt="서울시립미술관 smoa" />
                 <img src="{% static 'wp-content/themes/kicat/images/g22.jpg' %}" width="179" alt="대전예술의전당" />
                 <img src="{% static 'wp-content/themes/kicat/images/g25.jpg' %}" width="179" alt="서울문화재단" />
                 <img src="{% static 'wp-content/themes/kicat/images/g19.jpg' %}" width="179" alt="강원문화재단" />
