상담 도중 수정한 내역

--- a/app/core/templates/core/korea_culture_arts_translation_agency.html
+++ b/app/core/templates/core/korea_culture_arts_translation_agency.html
@@ -137,7 +137,7 @@
             <p class="p achievement-item">&lt;국립현대미술관 프로젝트 해시태그 공모 최종심사&gt; 한영 동시통역, 국립현대미술관, 2021-2025</p>
             <p class="p achievement-item">&lt;2024-2025 트래블링 코리안 아츠&gt; 매뉴얼 번역, 한국국제문화교육진흥원</p>
             <p class="p achievement-item">&lt;2024 코리아 시즌&gt; 협약서 및 기자간담회 자료 등 한영 번역, 한국문화예술교육원</p>
-            <p class="p achievement-item">&lt;2024 단원미술제&gt; 매뉴얼 한영번, 한국국제문화교육진흥원</p>
+            <p class="p achievement-item">&lt;2024 단원미술제&gt; 매뉴얼 한영 번역, 한국국제문화교육진흥원</p>
             <p class="p achievement-item">&lt;2023 코리아 시즌&gt; 협약서 및 제반서류 한영 번역, 한국국제문화교육진흥원</p>
             <p class="p achievement-item">&lt;2020 서울아트마켓&gt; 번역, 예술경영지원센터</p>
             <p class="p achievement-item">&lt;2019 서울도시건축비엔날레&gt; 홍보자료(가이드북, 도록 등) 번역, 서울디자인재단</p>
@@ -152,7 +152,7 @@
             <p class="p achievement-item">&lt;주한외교단/유관기관 합동 워크숍&gt; 자료집 번역, 문화체육관광부</p>
             <p class="p achievement-item">&lt;마리아스바르보바 개인전&gt; 전시번역, 롯데갤러리</p>
             <p class="p achievement-item">&lt;신한갤러리광화문 REUINION 특별전&gt; 전시번역, 신한갤러리</p>
-            <p class="p achievement-item">등...</p>
+            <p class="p achievement-item">등</p>
           </div>
           
           <button id="load-more-btn" style="
@@ -812,7 +812,7 @@
           </div>
         </div>
 
-        <h2 class="sub-title">AI PE 서비스</h2>
+        <h2 class="sub-title">AI-PE 서비스 유형</h2>
         <table class="rate-table" style="width: 100%; border-collapse: collapse;">
           <thead>
             <tr>
